--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -3,7 +3,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Rango</title>
+    <title>Rango1</title>
     <link rel="stylesheet" href="{% static "css/base.css" %}"/>
     <script src = "{% static "js/jsquery.js" %}"></script>
 
