--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,5 +21,8 @@
             <strong>The specified category does not exists!</strong>
         {% endif %}
     </div>
+    <ul>
+        <a href="/rango/">回到首页</a>
+    </ul>
 </body>
 </html>
