--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -2,13 +2,16 @@
 {% load static %}
 
 {% block title_block %}
-    Add Category
+    Add page
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add a Category</h1>
     <div>
-        <form id="category_form" method="post" action="{% url 'add_category' %}">
+		{% if category %}
+
+	        <h1>Add a Page to {{category.name}}</h1>
+
+        <form id="page_form" method="post" action="{% url 'add_page' %}">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
@@ -16,9 +19,15 @@
             {% for field in form.visible_fields %}
                 {{ field.errors }}
                 {{ field.help_text }}
-                {{ field }}
+                {{ field }} </br>
             {% endfor %}
-        <input type="submit" name="submit" value="Create Category" />
+        <input type="submit" name="submit" value="Create Page" />
         </form>
+
+        {% else %}
+            The specified category does not exist!
+        {% endif%}
+
     </div>
+
 {% endblock %}
