--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,28 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-            <ul>
-                {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
-                {% endfor %}
-            </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
+{% extends 'rango/base.html' %}
+{% load static %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        {% if pages %}
+        <ul>
+            {% for page in pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
+            {% endfor %}
+        </ul>
         {% else %}
-            <strong>The specified category does not exists!</strong>
+            <strong>No pages currently in category.</strong>
         {% endif %}
-    </div>
-    <ul>
-        <a href="/rango/">回到首页</a>
-    </ul>
-</body>
-</html>
+    {% else %}
+        <strong>The specified category does not exists!</strong>
+    {% endif %}
+
+{% endblock %}
