--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -28,8 +28,7 @@
             <li><a href="{% url 'about' %}">About</a></li>
             <li><a href="{% url 'index' %}">Index</a></li>
             <li><a href="{% url 'register' %}">Register Here</a></li>
-            <li><a href="{% url 'login' %}">Login</a><li>
-</ul>
+            <li><a href="{% url 'login' %}">Login</a></li>
         </ul>
     </div>
 
