--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -9,8 +9,8 @@
     <h1>Rango says...</h1>
     <div>
         {% if user.is_authenticated %}
-            print(user.username,user.password)
             howdy {{ user.username }}!
+            howdy {{ user1.username }}!
         {% else %}
         hey there partner!
         {% endif %}
