--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -11,7 +11,7 @@
 
 	        <h1>Add a Page to {{category.name}}</h1>
 
-        <form id="page_form" method="post" action="{% url 'add_page' %}">
+        <form id="page_form" method="post" action="{% url 'add_page' category.slug %}">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
