--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -20,7 +20,7 @@
         <strong>The specified category does not exists!</strong>
     {% endif %}
 	<div>
-		{% if category %}
+		{% if category and user.is_authenticated %}
 			<a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
 		{% endif %}
 		<a href="/rango/">Index</a><br />
