--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,6 +14,7 @@
         {% else %}
         hey there partner!
         {% endif %}
+        <p>visits: {{ visits }}</p>
     </div>
     <div>
         <h2>Most Liked Categories</h2>
