--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,3 +1,4 @@
+{% comment %}
 <!DOCTYPE html>
 {% load static %}
 {% load rango_template_tags %}
@@ -28,6 +29,7 @@
         <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
         <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
         <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+        <li><a href="{% url 'auth_password_change' %}">Change Password</a> </li>
         {% else %}
         <li><a href="{% url 'auth_login' %}">Login</a></li>
         <li><a href="{% url 'registration_register' %}">Register Here</a></li>
@@ -37,5 +39,116 @@
         </ul>
     </div>
 
+</body>
+</html>{% endcomment %}
+<!DOCTYPE html>
+{% load static %}
+{% load rango_template_tags %}
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,
+initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="{% static 'image/favicon.ico' %}">
+    <title>
+        Rango - {% block title %}How to Tango with Django!{% endblock %}
+    </title>
+    <!-- Bootstrap core CSS -->
+    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css"
+          rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href=
+                  "http://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css"
+          rel="stylesheet">
+</head>
+<body>
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+    <button class="navbar-toggler navbar-toggler-right hidden-lg-up"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbar"
+            aria-controls="navbar"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="{% url 'index' %}">Rango</a>
+
+    <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'index' %}">
+                    Home
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">
+                    About
+                </a>
+            </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'restricted' %}">
+                        Restricted Page
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add_category' %}">
+                        Add a New Category
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'auth_logout' %}?next=/rango/">
+                        Logout
+                    </a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'registration_register' %}">
+                        Register Here
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'auth_login' %}">
+                        Login
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>
+        <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
+            {% block body_block %}{% endblock %}
+        </div>
+    </div>
+</div>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script
+{#        src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">#}
+        src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
+<script
+        src="{% static 'js/tether.min.js' %}">
+</script>
+<script
+        src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js">
+</script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script
+        src="http://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js">
+</script>
 </body>
 </html>
