--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -8,9 +8,9 @@
 {% block body_block %}
     {% if category %}
         {% if pages %}
-        <ul>
+        <ul class="list-group">
             {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
+            <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a> </li>
             {% endfor %}
         </ul>
         {% else %}
@@ -19,7 +19,7 @@
     {% else %}
         <strong>The specified category does not exists!</strong>
     {% endif %}
-	<div>
+	<div >
 		{% if category and user.is_authenticated %}
 			<a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
 		{% endif %}
