--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,43 +6,45 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Rango says...</h1>
-    <div>
+    <div class="jumbotron">
+        <h1 class="display-3">Rango says...</h1>
         {% if user.is_authenticated %}
-            howdy {{ user.username }}!
-            howdy {{ user1.username }}!
+            <h1>hey there {{ user.username }}!</h1>
         {% else %}
-        hey there partner!
+            <h1>hey there partner! </h1>
         {% endif %}
         <p>visits: {{ visits }}</p>
     </div>
-    <div>
-        <h2>Most Liked Categories</h2>
-        {% if categories %}
-        <ul>
-            {% for category in categories %}
-                <li>
-                    <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
+    <div class="row marketing">
+        <div class="col-lg-6">
+            <h4>Most Liked Categories</h4>
+            <p>
+                {% if categories %}
+                    <ul class="list-group">
+                        {% for category in categories %}
+                            <li class="list-group-item"><a href="{% url 'show_category' category.slug %}">
+                                {{ category.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <strong>There are no categories present.</strong>
+                {% endif %}
+            </p>
+        </div>
+        <div class="col-lg-6">
+            <h4>Most Viewed Pages</h4>
+            <p>
+                {% if pages %}
+                    <ul class="list-group">
+                        {% for page in pages %}
+                            <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <strong>There are no categories present.</strong>
+                {% endif %}
+            </p>
+        </div>
     </div>
-    <div>
-        <h2>Most Viewed Pages</h2>
-        {% if pages %}
-        <ul>
-            {% for page in pages %}
-                <li>
-                    <a href="{{ page.url }}">{{ page.title }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
-        {% endif %}
-    </div>
-    <div>
-    </div>{% endblock %}
+    <img src="{% static "image/rango.jpg" %}" alt="Picture of Rango" />
+{% endblock %}
