--- a/templates/rango/search.html
+++ b/templates/rango/search.html
@@ -7,11 +7,10 @@
 {% block body_block %}
     <div>
         <h1>Search with Rango</h1>
-        <br/>
         <form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
             {% csrf_token %}
             <div class="form-group">
-                <input class="form-control" type="text" size="50" name="query" value="" id="query"/>
+                <input class="form-control" type="text" size="50" name="query" value="{{ query }}" id="query"/>
 
             </div>
             <button class="btn btn-primary" type="submit" name="submit" value="Search">Search</button>
