--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -25,4 +25,33 @@
 		{% endif %}
 		<a href="/rango/">Index</a><br />
 	</div>
+
+    <div>
+        <h1>Search with Rango</h1>
+        <form class="form-inline" id="user_form" method="post" action="{% url 'show_category' category.slug %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" type="text" size="50" name="query" value="{{ query }}" id="query"/>
+            </div>
+            <button class="btn btn-primary" type="submit" name="submit" value="Search">Search</button>
+        </form>
+        <div>
+            {% if result_list %}
+            <h3>Results</h3>
+            <div class="list-group">
+                {% for result in result_list %}
+                <div class="list-group-item">
+                    <h4 class="list-group-item-heading">
+                        <a href="{{ result.url }}">{{ result.title }}</a>
+
+                    <br/><img src="{{ result.picUrl}}"/><br/>
+                    <p class="list-group-item-text">{{ result.description }} </p>
+                    </h4>
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
 {% endblock %}
