--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -44,6 +44,8 @@
 <!DOCTYPE html>
 {% load static %}
 {% load rango_template_tags %}
+<script src="{% static "js/jquery.min.js" %}"></script>
+<script src="{% static "js/rango-jquery.js" %}"></script>
 <html lang="en">
 <head>
     <meta charset="utf-8">
