--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -18,7 +18,7 @@
 	</p>
 	<hr>
 
-		<button class="btn btn-primary" id="about-btn"> JQuery Alert Example</button>
+		<button id="about-btn">Click Me - I'm JavaScript on Speed</button>
 	<p>This text is for a Jquery Example - I'll turn red when you hover over me.</p>
 	<div id="msg">Hello - I'm here for a Jquery Example too</div>
 {% endblock %}
