--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -6,25 +6,39 @@
 {% endblock %}
 
 {% block body_block %}
-    {% if category %}
-        {% if pages %}
-        <ul class="list-group">
-            {% for page in pages %}
-            <li class="list-group-item"><a href="{% url 'goto' %}?page_id={{ page.id }}">{{ page.title }}</a> </li>
-            {% endfor %}
-        </ul>
+    <div>
+        {% if category %}
+            <h1 >{{ category.name }}</h1>
+
+            <div>
+                <strong id="like_count">{{ category.likes }}</strong> people like this category
+                {% if user.is_authenticated %}
+                    <button id="likes" data-catid="{{category.id}}" class="btn btn-primary btn-sm" type="button">
+                        Like
+                    </button>
+                {% endif %}
+            </div>
+
+            <div id="pages">
+            {% if pages %}
+                <ul class="list-group">
+                    {% for page in pages %}
+                        <li class="list-group-item"><a href="{% url 'goto' %}?page_id={{ page.id }}">{{ page.title }}</a> </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>No pages currently in category.</strong>
+            {% endif %}
         {% else %}
-            <strong>No pages currently in category.</strong>
+            <strong>The specified category does not exists!</strong>
         {% endif %}
-    {% else %}
-        <strong>The specified category does not exists!</strong>
-    {% endif %}
-	<div >
-		{% if category and user.is_authenticated %}
-			<a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
-		{% endif %}
-		<a href="/rango/">Index</a><br />
-	</div>
+        </div>
+
+        {% if category and user.is_authenticated %}
+            <a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
+        {% endif %}
+        <a href="/rango/">Index</a><br />
+    </div>
 
     <div>
         <h1>Search with Rango</h1>
@@ -46,6 +60,11 @@
 
                     <br/><img src="{{ result.picUrl}}"/><br/>
                     <p class="list-group-item-text">{{ result.description }} </p>
+                    {% if user.is_authenticated %}
+                        <button data-catid="{{category.id}}" data-title="{{ result.title }}"
+                                data-url="{{ result.link }}"
+                                class="rango-add btn btn-info btn-sm" type="button">Add</button>
+                    {% endif %}
                     </h4>
                 </div>
                 {% endfor %}
